--- a/lab5/lab5c.html
+++ b/lab5/lab5c.html
@@ -20,11 +20,11 @@
 		camera.position.z = 60;
 		
 		particles = []
-		const geo = new THREE.Geometry()
+		const geometry = new THREE.Geometry()
 		for(let i=0; i<1000; i++) {
 			const particle = {
 				position: new THREE.Vector3(
-					THREE.MathUtils.randFloatSpread( 100 ),
+					THREE.MathUtils.randFloatSpread( 200 ),
 					THREE.MathUtils.randFloatSpread( 500 ),
 					THREE.MathUtils.randFloatSpread( 100 )),
 				velocity: new THREE.Vector3(
@@ -33,28 +33,23 @@
 					Math.random() * .02 - .01),
 			}
 			particles.push(particle);
-			geo.vertices.push(particle.position)
+			geometry.vertices.push(particle.position)
 		}
-		
-		var mat = new THREE.PointsMaterial({color:0xe0f6ff,size: 0.5});
-		mesh = new THREE.Points(geo,mat);
-		mesh.position.z = -4;
+		var sprite = new THREE.TextureLoader().load('snowflake.png');
+		var material = new THREE.PointsMaterial({map: sprite, color: 0xa8edff, alphaTest: 0.5, transparent: true});
+		mesh = new THREE.Points(geometry,material);
 		scene.add(mesh);
-
+		
 		function animate() {
 			requestAnimationFrame(animate);
 			renderer.render(scene, camera);
 			particles.forEach(p => {
 				p.position.add(p.velocity);
 				if(p.position.y <= -100){
-					//console.log(mouseX);
-					p.position.y = THREE.MathUtils.randFloatSpread( 500 );
-					//p.velocity.x += mouseX*0.0001;
-					var newColor = new THREE.Color(p.position.y%255, 211, 255);
-					mesh.material.color = newColor;
-				}
-				
+					p.position.y = THREE.MathUtils.randFloatSpread( 500 );	
+				}			
 			});
+
 			mesh.geometry.verticesNeedUpdate = true;
 			
 		}
