--- a/lab7/lab7b.html
+++ b/lab7/lab7b.html
@@ -48,17 +48,20 @@
 						float amp = 0.1;
 						float angle = (time + position.x)*freq;
 						transformed.z += sin(angle)*amp;
+						objectNormal = normalize(vec3(-amp * freq * cos(angle),0.0,1.0));
+						vNormal = normalMatrix * objectNormal;
 		`
 				shader.vertexShader = shader.vertexShader.replace(token,customTransform)
 				matShader = shader
 			}
 			
-			objectNormal = normalize(vec3(-amp * freq * cos(angle),0.0,1.0));
-			vNormal = normalMatrix * objectNormal;
+			
 
 			function animate(time) {
 				requestAnimationFrame(animate);
 				renderer.render(scene, camera);
+				if(matShader) matShader.uniforms.time.value = time/1000;
+
 			}
 			renderer.setAnimationLoop(animate)
 		</script>
